--- a/src/Matcha.BackgroundService.Droid/Matcha.BackgroundService.Droid.csproj
+++ b/src/Matcha.BackgroundService.Droid/Matcha.BackgroundService.Droid.csproj
@@ -56,6 +56,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="System.Reactive">
+      <Version>3.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms">
       <Version>2.5.0.122203</Version>
     </PackageReference>
