--- a/src/Matcha.BackgroundService.iOS/Matcha.BackgroundService.iOS.csproj
+++ b/src/Matcha.BackgroundService.iOS/Matcha.BackgroundService.iOS.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="System.Reactive">
+      <Version>3.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms">
       <Version>2.5.0.122203</Version>
     </PackageReference>
