--- a/src/SampleBackground/SampleBackground.iOS/SampleBackground.iOS.csproj
+++ b/src/SampleBackground/SampleBackground.iOS/SampleBackground.iOS.csproj
@@ -189,6 +189,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Matcha.BackgroundService">
+      <Version>1.0.5460</Version>
+    </PackageReference>
     <PackageReference Include="MonkeyCache.SQLite">
       <Version>0.1.0.10-beta</Version>
     </PackageReference>
@@ -196,14 +199,8 @@
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.0.0.396" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Matcha.BackgroundService.iOS\Matcha.BackgroundService.iOS.csproj">
-      <Project>{e71f3053-056c-4381-9638-048ed73bdff6}</Project>
-      <Name>Matcha.BackgroundService.iOS</Name>
-      <IsAppExtension>false</IsAppExtension>
-      <IsWatchApp>false</IsWatchApp>
-    </ProjectReference>
     <ProjectReference Include="..\SampleBackground\SampleBackground.csproj">
-      <Project>{A682884C-CB44-4A89-B752-27BB634E0ABE}</Project>
+      <Project>{753cc20f-1b34-4328-9ee3-613575f528c5}</Project>
       <Name>SampleBackground</Name>
     </ProjectReference>
   </ItemGroup>
